--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "big-integer": "^1.6.17",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "big-integer": "^1.6.17",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "request": "^2.81.0"
   },
   "devDependencies": {
